--- a/languages/rrze-newsletter-de_DE_formal-rrze-newsletter.json
+++ b/languages/rrze-newsletter-de_DE_formal-rrze-newsletter.json
@@ -5,7 +5,7 @@
          "": {
             "domain": "messages",
             "plural_forms": "nplurals=2; plural=n != 1;",
-            "lang": "de_DE"
+            "lang": "de"
          },
          "RRZE Newsletter": [
             "RRZE Newsletter"
@@ -84,12 +84,6 @@
          ],
          "Password": [
             "Passwort"
-         ],
-         "Queue Limit": [
-            "Queue-Limit"
-         ],
-         "Maximum number of emails that can be queued at once.": [
-            "Maximale Anzahl von E-Mails, die gleichzeitig in die Queue gestellt werden können."
          ],
          "Send Limit": [
             "Sende-Limit"
@@ -231,9 +225,6 @@
          ],
          "Preview": [
             "Vorschau"
-         ],
-         "Post is not a Newsletter.": [
-            "Post ist kein Newsletter."
          ],
          "Add New": [
             "Erstellen"
