--- a/languages/rrze-newsletter-de_DE_formal.po
+++ b/languages/rrze-newsletter-de_DE_formal.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: RRZE Newsletter\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/rrze-newsletter\n"
 "POT-Creation-Date: 2021-05-10T14:41:34+00:00\n"
-"PO-Revision-Date: 2021-05-10 16:44+0200\n"
+"PO-Revision-Date: 2021-05-10 17:10+0200\n"
 "Last-Translator: RRZE Webteam <webmaster@fau.de>\n"
 "Language-Team: Deutsch\n"
 "Language: de_DE@formal\n"
@@ -154,7 +154,7 @@ msgstr "Newsletter-Abonnement"
 
 #: config/settings.php:182
 msgid "Subscription Page URL"
-msgstr "Abonnementseite-URL"
+msgstr "URL der Abonnementseite"
 
 #: config/settings.php:183
 msgid "URL of the subscripcion page."
@@ -166,7 +166,7 @@ msgstr "Betreff der E-Mail-Bestätigung"
 
 #: config/settings.php:193
 msgid "Email subject of the confirmation of the newsletter subscription."
-msgstr "E-Mail-Betreff der Bestätigung des Newsletter-Abonnements."
+msgstr "E-Mail-Betreff zur Bestätigung des Newsletter-Abonnements."
 
 #: config/settings.php:201
 msgid "Message of the email confirmation"
@@ -749,22 +749,19 @@ msgid "Manage newsletter subscription page"
 msgstr "Newsletter-Abonnementseite verwalten"
 
 #: includes/Subscription.php:477
-#, fuzzy
-#| msgid "Click below to confirm you subscription for the newsletter."
 msgid "Confirm subscription to the newsletter."
-msgstr "Klicken Sie unten, um Ihr Abonnement für den Newsletter zu bestätigen."
+msgstr "Bestätigen Sie das Abonnement des Newsletters."
 
 #: includes/Subscription.php:544
-#, fuzzy
-#| msgid "Click below to confirm you subscription for the newsletter."
 msgid "Click on the link below to confirm your subscription to the newsletter."
-msgstr "Klicken Sie unten, um Ihr Abonnement für den Newsletter zu bestätigen."
+msgstr ""
+"Klicken Sie auf den Link unten, um Ihr Abonnement für den Newsletter zu "
+"bestätigen."
 
 #: includes/Subscription.php:546
-#, fuzzy
-#| msgid "If you haven't subscribed for it, please ignore this email."
 msgid "If you have not subscribed to the newsletter, please ignore this email."
-msgstr "Wenn Sie es nicht abonniert haben, ignorieren Sie bitte diese E-Mail."
+msgstr ""
+"Wenn Sie den Newsletter nicht abonniert haben, ignorieren Sie diese E-Mail."
 
 #: includes/Subscription.php:547
 msgid "Sincerely"
