--- a/languages/rrze-newsletter-de_DE.po
+++ b/languages/rrze-newsletter-de_DE.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: RRZE Newsletter\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/rrze-newsletter\n"
-"POT-Creation-Date: 2021-06-28T15:47:23+00:00\n"
-"PO-Revision-Date: 2021-06-28 17:49+0200\n"
+"POT-Creation-Date: 2021-07-09T12:40:55+00:00\n"
+"PO-Revision-Date: 2021-07-09 14:53+0200\n"
 "Last-Translator: RRZE Webteam <webmaster@fau.de>\n"
 "Language-Team: Deutsch\n"
 "Language: de_DE\n"
@@ -223,11 +223,11 @@ msgstr "Secret-Key"
 msgid "The API Key act as a password."
 msgstr "Der API-Key fungiert als Kennwort."
 
-#: includes/Blocks.php:78
-msgid "RSS Error:"
-msgstr "RSS-Fehler:"
+#: includes/Blocks/ICS/ICS.php:89
+msgid "ICS Error:"
+msgstr "ICS-Fehler:"
 
-#: includes/Blocks.php:82
+#: includes/Blocks/ICS/ICS.php:93 includes/Blocks/RSS.php:89
 msgid ""
 "An error has occurred, which probably means the feed is down. Try again "
 "later."
@@ -235,7 +235,55 @@ msgstr ""
 "Ein Fehler ist aufgetreten – der Feed funktioniert zurzeit nicht. Versuchen "
 "Sie es später nochmal."
 
-#: includes/Blocks.php:90 includes/Blocks.php:169
+#: includes/Blocks/ICS/ICS.php:453
+msgid "Ends"
+msgstr "Endet"
+
+#: includes/Blocks/ICS/ICS.php:1013
+msgid "Recurring event"
+msgstr "Wiederkehrender Termin"
+
+#. translators: %s: recurring event.
+#: includes/Blocks/ICS/ICS.php:1022
+msgid "Recurs every %s years"
+msgstr "Wiederholt sich alle %s Jahre"
+
+#: includes/Blocks/ICS/ICS.php:1023
+msgid "Recurs yearly"
+msgstr "Wiederholt sich jährlich"
+
+#. translators: %s: recurring event.
+#: includes/Blocks/ICS/ICS.php:1028
+msgid "Recurs every %s months"
+msgstr "Wiederholt sich alle %s Monate"
+
+#: includes/Blocks/ICS/ICS.php:1029
+msgid "Recurs monthly"
+msgstr "Wiederholt sich monatlich"
+
+#. translators: %s: recurring event.
+#: includes/Blocks/ICS/ICS.php:1034
+msgid "Recurs every %s weeks"
+msgstr "Wiederholt sich alle %s Wochen"
+
+#: includes/Blocks/ICS/ICS.php:1035
+msgid "Recurs weekly"
+msgstr "Wiederholt sich wöchentlich"
+
+#. translators: %s: recurring event.
+#: includes/Blocks/ICS/ICS.php:1040
+msgid "Recurs every %s days"
+msgstr "Wiederholt sich alle %s Tage"
+
+#: includes/Blocks/ICS/ICS.php:1041
+msgid "Recurs daily"
+msgstr "Wiederholt sich täglich"
+
+#: includes/Blocks/RSS.php:85
+msgid "RSS Error:"
+msgstr "RSS-Fehler:"
+
+#: includes/Blocks/RSS.php:105 includes/Blocks/RSS.php:185
 #: src/editor/blocks/post-inserter/query-controls.js:41
 #: src/editor/blocks/post-inserter/query-controls.js:156
 #: src/editor/blocks/post-inserter/query-controls.js:173
@@ -245,7 +293,7 @@ msgid "(no title)"
 msgstr "(kein Titel)"
 
 #. translators: %s: the author.
-#: includes/Blocks.php:119 includes/Blocks.php:198
+#: includes/Blocks/RSS.php:134 includes/Blocks/RSS.php:214
 msgid "by %s"
 msgstr "von %s"
 
@@ -671,7 +719,7 @@ msgstr "E-Mail erfolgreich an %s gesendet."
 msgid "There was an error sending the email to %s."
 msgstr "Beim Senden der E-Mail an %s ist ein Fehler aufgetreten."
 
-#: includes/Main.php:63
+#: includes/Main.php:65
 msgid "Settings"
 msgstr "Einstellungen"
 
@@ -1091,6 +1139,66 @@ msgstr ""
 "Diese Eigenschaften werden in einer E-Mail nicht korrekt angezeigt. Bitte "
 "entfernen Sie sie:"
 
+#: src/editor/blocks/ics/edit.js:79 src/editor/blocks/rss/edit.js:77
+msgid "Enter URL here…"
+msgstr "URL hier eingeben…"
+
+#: src/editor/blocks/ics/edit.js:90 src/editor/blocks/rss/edit.js:88
+msgid "Use URL"
+msgstr "URL verwenden"
+
+#: src/editor/blocks/ics/edit.js:101
+msgid "Edit ICS URL"
+msgstr "ICS-URL bearbeiten"
+
+#: src/editor/blocks/ics/edit.js:112
+msgid "ICS settings"
+msgstr "ICS-Einstellungen"
+
+#: src/editor/blocks/ics/edit.js:114 src/editor/blocks/rss/edit.js:112
+msgid "Number of items"
+msgstr "Anzahl Elemente"
+
+#: src/editor/blocks/ics/edit.js:124
+msgid "Display location"
+msgstr "Standort anzeigen"
+
+#: src/editor/blocks/ics/edit.js:129
+msgid "Display organizer"
+msgstr "Veranstalter anzeigen"
+
+#: src/editor/blocks/ics/edit.js:134
+msgid "Display description"
+msgstr "Beschreibung anzeigen"
+
+#: src/editor/blocks/ics/edit.js:140
+msgid "Limit length of description"
+msgstr "Länge der Beschreibung begrenzen"
+
+#: src/editor/blocks/ics/edit.js:147
+msgid "Max number of words in description"
+msgstr "Maximale Anzahl von Wörtern in der Beschreibung"
+
+#: src/editor/blocks/ics/edit.js:161
+#: src/editor/blocks/post-inserter/index.js:213
+#: src/editor/blocks/rss/edit.js:152
+msgid "Heading"
+msgstr "Überschrift"
+
+#: src/editor/blocks/ics/edit.js:180
+#: src/editor/blocks/post-inserter/index.js:232
+#: src/editor/blocks/rss/edit.js:171
+msgid "Text"
+msgstr "Text"
+
+#: src/editor/blocks/ics/index.js:18
+msgid "ICS"
+msgstr "ICS"
+
+#: src/editor/blocks/ics/index.js:21
+msgid "Display entries from any ICS or ICal feed."
+msgstr "Einträge von jedem ICS- oder ICal-Feed anzeigen."
+
 #: src/editor/blocks/post-inserter/index.js:128
 msgid "Show image on top"
 msgstr "Bild oben anzeigen"
@@ -1112,7 +1220,7 @@ msgid "Post excerpt"
 msgstr "Textauszug"
 
 #: src/editor/blocks/post-inserter/index.js:161
-#: src/editor/blocks/rss/edit.js:125
+#: src/editor/blocks/rss/edit.js:138
 msgid "Max number of words in excerpt"
 msgstr "Maximale Anzahl von Wörtern im Textauszug"
 
@@ -1135,14 +1243,6 @@ msgstr "„Weiterlesen…“-Link"
 #: src/editor/blocks/post-inserter/index.js:206
 msgid "Sorting and filtering"
 msgstr "Sortieren und filtern"
-
-#: src/editor/blocks/post-inserter/index.js:213
-msgid "Text"
-msgstr "Text"
-
-#: src/editor/blocks/post-inserter/index.js:232
-msgid "Heading"
-msgstr "Überschrift"
 
 #: src/editor/blocks/post-inserter/index.js:262
 msgid "Post Inserter"
@@ -1197,35 +1297,23 @@ msgstr "und"
 msgid "By"
 msgstr "Von"
 
-#: src/editor/blocks/rss/edit.js:67
-msgid "Enter URL here…"
-msgstr "URL hier eingeben…"
-
-#: src/editor/blocks/rss/edit.js:75
-msgid "Use URL"
-msgstr "URL verwenden"
-
-#: src/editor/blocks/rss/edit.js:86
+#: src/editor/blocks/rss/edit.js:99
 msgid "Edit RSS URL"
 msgstr "RSS-URL bearbeiten"
 
-#: src/editor/blocks/rss/edit.js:97
+#: src/editor/blocks/rss/edit.js:110
 msgid "RSS settings"
 msgstr "RSS-Einstellungen"
 
-#: src/editor/blocks/rss/edit.js:99
-msgid "Number of items"
-msgstr "Anzahl Elemente"
-
-#: src/editor/blocks/rss/edit.js:109
+#: src/editor/blocks/rss/edit.js:122
 msgid "Display author"
 msgstr "Autor anzeigen"
 
-#: src/editor/blocks/rss/edit.js:114
+#: src/editor/blocks/rss/edit.js:127
 msgid "Display date"
 msgstr "Datum anzeigen"
 
-#: src/editor/blocks/rss/edit.js:119
+#: src/editor/blocks/rss/edit.js:132
 msgid "Display excerpt"
 msgstr "Textauszug anzeigen"
 
@@ -1408,11 +1496,3 @@ msgstr "Newsletter wurde bereits verschickt."
 #: src/service-providers/generic/index.js:124
 msgid "Sending newsletter to:"
 msgstr "Senden eines Newsletters an:"
-
-#~ msgctxt "block keyword"
-#~ msgid "atom"
-#~ msgstr "Atom"
-
-#~ msgctxt "block keyword"
-#~ msgid "feed"
-#~ msgstr "Feed"
